--- a/style.css
+++ b/style.css
@@ -252,3 +252,33 @@ h3 {
     padding: 1px;
     margin: 10px 40px;
 }
+
+nav ul .search{
+    position: relative;
+    width: 30%;
+    padding: 1px 10px;
+    border-radius: 20px;
+    color: rgb(255, 255, 255);
+    background: transparent;
+  }
+nav ul .search::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    background: grey;
+    backdrop-filter: blur(5px);
+    z-index: -1;
+  }
+nav ul .search input{
+     background: whitesmoke;
+     outline: none;
+     width: 80%;
+     border: none;
+     border-radius: 10px;
+     padding: 0px 7px;
+     margin-right: 20px;
+     color: #000000;
+     font-size: 16px;
+  }
