--- a/style.css
+++ b/style.css
@@ -272,13 +272,63 @@ nav ul .search::before{
     z-index: -1;
   }
 nav ul .search input{
-     background: whitesmoke;
-     outline: none;
-     width: 80%;
-     border: none;
-     border-radius: 10px;
-     padding: 0px 7px;
-     margin-right: 20px;
-     color: #000000;
-     font-size: 16px;
+    background: whitesmoke;
+    outline: none;
+    width: 80%;
+    border: none;
+    border-radius: 10px;
+    padding: 0px 7px;
+    margin-right: 20px;
+    color: #000000;
+    font-size: 16px;
   }
+
+nav ul .search .search_result{
+    position: absolute;  
+    width: 100%;
+    height: 200px;
+    /*border: 1px solid #fff;*/
+    margin-top: 10px;
+    border-radius: 10px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    overflow: auto;
+ }
+
+
+nav ul .search .search_result::-webkit-scrollbar{
+    display: none;
+ }
+nav ul .search .search_result .card{
+    width: 100%;
+    min-height: 45px;
+    /*border: 1px solid #fff;*/
+    display: none;
+    align-items: center;
+    padding: 0px 5px;
+    text-decoration: none;
+    background: rgb(184, 184, 184, 0.1);
+    margin-bottom: 5px;
+ }
+
+nav ul .search .search_result .card img{
+    width: 35px;
+    height: 35px;
+    border-radius: 5px;
+}
+
+nav ul .search .search_result .card .content{
+    width: 80%;
+    height: 100%;
+    /*border: 1px solid #fff;*/
+    padding: 0;
+    font-size: 13px;
+    font-weight: 600;
+    color: #fff;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+}
