--- a/style.css
+++ b/style.css
@@ -45,16 +45,13 @@ nav ul li a{
     font-weight: bolder;
     font-size: 1.3rem;
 }
-.btn1 {
-    border: transparent;
-    color: white;
-    padding: 10px 10px;
-    text-align: center;
-    font-size: 16px;
-    margin: 4px 2px;
-    opacity: 1;
-    transition: 0.3s;
-  }
+
+.grid{
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 10px;
+    align-items: center;
+}
   
 .btn1:hover {
     opacity: 0.6;
@@ -89,6 +86,7 @@ nav ul li a{
 
 .icons{
     margin-top: 14px;
+    margin-bottom: 10px;
 }
 
 .icons i{
@@ -225,12 +223,12 @@ nav ul li a{
     font-family: 'Varela Round', sans-serif;
     display: table;
     margin: 15px auto;
-    width: 80%;
+    width: 100%;
     border-radius: 12px;
     padding: 0px;
 }
 
-.songclassification .categories{
+/*.songclassification .categories{
     min-height: 30vh;
     background-color: whitesmoke;
     color: white;
@@ -252,7 +250,7 @@ nav ul li a{
     width: 80%;
     border-radius: 12px;
     padding: 0px;
-}
+}*/
 
 h3 {
     color: crimson;
@@ -266,39 +264,94 @@ h3 {
     margin: 10px 40px;
 }
 
-nav ul .search{
+.searchbox{
     position: relative;
-    width: 30%;
-    padding: 1px 10px;
-    border-radius: 20px;
-    color: rgb(255, 255, 255);
-    background: transparent;
+    height: 35px;
+    max-width: 55px;
+    width: 23%;
+    margin: 0 40px;
+    border-radius: 25px;
+    background-color: #fff;
+    transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   }
-nav ul .search::before{
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-    background: rgb(184, 184, 184, 0.1);
-    backdrop-filter: blur(5px);
-    z-index: -1;
-  }
-nav ul .search input{
-    background: rgb(184, 184, 184, 0.1);
+
+nav ul .searchbox.open{
+    max-width: 450px;
+}
+
+input{
+    position: relative;
     outline: none;
-    width: 80%;
     border: none;
-    border-radius: 10px;
-    padding: 0px 7px;
-    margin-right: 20px;
-    color: #fefefe;
+    height: 95%;
+    width: 100%;
+    border-radius: 25px;
     font-size: 16px;
+    font-weight: 400;
+    color: #333;
+    background-color: #fff;
+  }
+
+nav ul .searchbox.open{
+    padding: 0 15px 0 65px;
+}
+
+nav ul .searchbox.open input{
+    background-color: #fff;
+    border-radius: 25px;
+    place-content: "Search Music...";
+}
+
+.icon{
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
+    width: 35px;
+    border-radius: 25px;
+    display: flex;
+    justify-content: center;
+    background-color: #fff;
+  }
+
+.search-icon,.close-icon{
+  position: absolute;
+  top: 5%;
+  font-size: 20px;
+  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.search-icon{
+    top: 15px;
+    color: #4070f4;
+    transform: translateY(-50%) rotate(90deg);
+    cursor: pointer;
+  }
+
+.searchbox.open .search-icon{
+    transform: translateY(-50%) rotate(0);
+  }
+
+.close-icon{
+    right: -25px;
+    top: 15px;
+    color: #fff;
+    padding: 5px;
+    opacity: 0;
+    pointer-events: none;
+    transform: translateY(-50%);
+    cursor: pointer;
+  }
+
+.searchbox.open .close-icon{
+    opacity: 1;
+    pointer-events: auto;
+    transform: translateY(-50%) rotate(180deg);
   }
 
 nav ul .search .search_result{
     position: absolute;  
-    width: 100%;
+    width: 26%;
     height: 200px;
     margin-top: 10px;
     border-radius: 10px;
@@ -307,12 +360,13 @@ nav ul .search .search_result{
     justify-content: flex-start;
     flex-direction: column;
     overflow: auto;
+    left: 42%;
  }
-
 
 nav ul .search .search_result::-webkit-scrollbar{
     display: none;
  }
+
 nav ul .search .search_result .card{
     width: 100%;
     min-height: 45px;
@@ -320,12 +374,12 @@ nav ul .search .search_result .card{
     align-items: center;
     padding: 0px 5px;
     text-decoration: none;
-    background: rgb(184, 184, 184, 0.5);
+    background: rgba(184, 184, 184, 0.514);
     margin-bottom: 5px;
  }
- nav ul .search .search_result .card:hover{
+
+nav ul .search .search_result .card:hover{
     background: rgba(34, 33, 33, 0.5);
-    color: #ffffff;
  }
 
 nav ul .search .search_result .card img{
@@ -340,7 +394,7 @@ nav ul .search .search_result .card .content{
     padding: 0;
     font-size: 13px;
     font-weight: 600;
-    color: #000000;
+    color: white;
     display: flex;
     align-items: flex-start;
     justify-content: center;
@@ -348,5 +402,9 @@ nav ul .search .search_result .card .content{
 }
 
 nav ul .search .search_result .card .content:hover{
-    color: #ffffff;
+    color: #090ded;
+}
+
+nav ul .search .search_result .card .songItemPlay{
+    color: white;
 }
