--- a/style.css
+++ b/style.css
@@ -97,6 +97,26 @@ nav ul li a{
     cursor: pointer;
 }
 
+#backward{
+    position: relative;
+    left: -10px;
+}
+
+#previous{
+    position: relative;
+    left: -5px;
+}
+
+#next{
+    position: relative;
+    left: 5px;
+}
+
+#forward{
+    position: relative;
+    left: 10px;
+}
+
 #myProgressBar{
     width: 80vw;
     cursor: pointer;
@@ -156,7 +176,7 @@ nav ul li a{
 .songInfo #end{
     position: relative;
     left: 73vw;
-    top: -22px;
+    top: -18px;
 }
 
 @media only screen and (max-width: 1100px) {
@@ -432,7 +452,6 @@ nav ul .search .search_result .card .lyrics{
     left: 160px;
     cursor: pointer;
     transform: rotate(270deg);
-    display: none;
 }
 
 .songInfo .vol{
