--- a/style.css
+++ b/style.css
@@ -316,7 +316,7 @@ input{
     border-radius: 25px;
     font-size: 16px;
     font-weight: 400;
-    color: #4070f4;
+    color: #3764dd;
     background-color: #fff;
   }
 
@@ -376,10 +376,36 @@ nav ul .searchbox.open input{
     cursor: pointer;
   }
 
+.close-icon:hover{
+    color: red;
+}
+
 .searchbox.open .close-icon{
     opacity: 1;
     pointer-events: auto;
     transform: translateY(-50%) rotate(180deg);
+  }
+
+  .voice-search{
+    position: relative;
+    right: -340px;
+    top: -20px;
+    color: #f90505;
+    padding: 5px;
+    opacity: 0;
+    pointer-events: none;
+    transform: translateY(-50%);
+    cursor: pointer;
+  }
+
+  .voice-search:hover{
+    color: green;
+  }
+
+.searchbox.open .voice-search{
+    opacity: 1;
+    pointer-events: auto;
+    transform: translateY(-50%);
   }
 
 nav ul .search .search_result{
