--- a/style.css
+++ b/style.css
@@ -185,9 +185,9 @@ nav ul li a{
 }
 
 .songInfo #end{
-    position: relative;
-    left: 73vw;
-    top: -18px;
+    position: fixed;
+    left: 91vw;
+    top: 42.7vw;
 }
 
 @media only screen and (max-width: 1100px) {
