--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@ body{
 
 /*nav{
     font-family: 'Ubuntu', sans-serif;
-}
+}*/
 
-nav ul{
+/*nav .search-card{
     display: flex;
     align-items: center;
     list-style-type: none;
@@ -19,31 +19,6 @@ nav ul{
     margin: 23px auto;
     width: 92%;
     border-radius: 12px;
-}
-
-nav ul li{
-    padding: 0 12px;
-}
-
-nav ul li a{
-    float: left;
-    font-size: 16px;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}*/
-
-/*.brand img{
-    width: 44px;
-    padding: 0 8px;
-}
-
-.brand{
-    display: flex;
-    align-items: center;
-    font-weight: bolder;
-    font-size: 1.3rem;
 }*/
 
 .logo{
@@ -274,30 +249,6 @@ nav ul li a{
     padding: 0px;
 }
 
-/*.songclassification .categories{
-    min-height: 30vh;
-    background-color: whitesmoke;
-    color: white;
-    font-family: 'Varela Round', sans-serif;
-    display: table;
-    margin: 15px auto;
-    width: 80%;
-    border-radius: 12px;
-    padding: 0px;
-}
-
-.songclassification .Albums{
-    min-height: 30vh;
-    background-color: whitesmoke;
-    color: white;
-    font-family: 'Varela Round', sans-serif;
-    display: table;
-    margin: 15px auto;
-    width: 80%;
-    border-radius: 12px;
-    padding: 0px;
-}*/
-
 h3 {
     color: crimson;
     font-weight: bolder;
@@ -310,7 +261,7 @@ h3 {
     margin: 10px 40px;
 }
 
-.searchbox{
+/*.searchbox{
     position: relative;
     height: 35px;
     max-width: 55px;
@@ -401,7 +352,7 @@ nav ul .searchbox.open input{
     opacity: 1;
     pointer-events: auto;
     transform: translateY(-50%) rotate(180deg);
-  }
+  }*/
 
   .voice-search{
     position: relative;
@@ -429,14 +380,13 @@ nav ul .search .search_result{
     position: absolute;  
     width: 26%;
     height: 200px;
-    margin-top: 10px;
+    margin-top: 50px;
     border-radius: 10px;
     display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
     flex-direction: column;
     overflow: auto;
-    left: 42%;
+    overflow-y: hidden;
+    left: 65%;
  }
 
 nav ul .search .search_result::-webkit-scrollbar{
@@ -446,43 +396,40 @@ nav ul .search .search_result::-webkit-scrollbar{
 nav ul .search .search_result .card{
     width: 100%;
     min-height: 45px;
-    display: none;
-    align-items: center;
     padding: 0px 5px;
     text-decoration: none;
-    background: rgba(184, 184, 184, 0.514);
+    background: rgba(252, 251, 251, 0.9);
     margin-bottom: 5px;
  }
 
-nav ul .search .search_result .card:hover{
-    background: rgba(34, 33, 33, 0.5);
- }
-
 nav ul .search .search_result .card img{
+    position: relative;
     width: 35px;
     height: 35px;
     border-radius: 5px;
+    top: 5px;
 }
 
 nav ul .search .search_result .card .content{
+    position: relative;
     width: 80%;
     height: 100%;
-    padding: 0;
-    font-size: 13px;
+    font-size: 15px;
     font-weight: 600;
-    color: white;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-direction: column;
+    color: black;
+    top: -25px;
+    left: 45px;
 }
 
 nav ul .search .search_result .card .content:hover{
-    color: #090ded;
+    color: #052af9;
 }
 
 nav ul .search .search_result .card .songItemPlay{
-    color: white;
+    position: absolute;
+    color: black;
+    right: 2%;
+    top: -45px;
 }
 
 nav ul .search .search_result .card .lyrics{
